browsers/bipex/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bipex-browser
spec:
  replicas: 1
  selector:
    matchLabels:
      name: bipex-browser
  template:
    metadata:
      labels:
        name: bipex-browser
    spec:
      containers:
      - name: app
        image: gcr.io/exac-gnomad/bipex-browser:latest
        ports:
        - name: http
          containerPort: 8000
        readinessProbe:
          httpGet:
            path: /ready
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 20
      nodeSelector:
        cloud.google.com/gke-nodepool: default-pool
