browsers/bipex/deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bipex-browser
  labels:
    state: serving
spec:
  type: NodePort
  selector:
    name: bipex-browser
  ports:
  - port: 80
    targetPort: 8000
