browsers/bipex/deploy/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bipex-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: bipex-browser
    ingress.gcp.kubernetes.io/pre-shared-cert: bipex-2020
spec:
  rules:
  - host: bipex.broadinstitute.org
    http:
      paths:
      - path:
        backend:
          serviceName: bipex-browser
          servicePort: 80
